index.css
html {
    scrollbar-gutter: stable;
}

body {
    margin-top: 50px;
    background: #0c0c0c;
    color: white;
    font-family: Arial, sans-serif;
    text-align: center;
}

h1 {
    margin-top: 40px;
    user-select: none;
}

table {
    margin: 30px auto;
    border-collapse: collapse;
    max-width: 700px;
    width: 100%;
    table-layout: fixed;
}

th, td {
    padding: 10px;
    border-bottom: 1px solid #333;
    width: 33.33%;
}

th {
    background: #1c1c1c;
}

tr:hover {
    background: #272727;
}

.loading {
    margin-top: 40px;
}

.message {
    margin-top: 10px;
    font-size: 16px;
    cursor: default;
}

.error {
    color: #ff5555;
}

.logo {
    margin-top: 20px;
    height: 100px;
    user-select: none;
    -webkit-user-drag: none;
    -moz-user-drag: none;
    -ms-user-drag: none;
}

button {
    border-radius: 15px;
    margin-bottom: 20px;
    padding: 10px 20px;
    font-size: 16px;
    font-weight: bold;
    cursor: pointer;
    user-select: none;
}

.social-icons {
    position: fixed;
    bottom: 10px;
    right: 10px;
    display: flex;
    gap: 10px;
    z-index: 1000;
}

img.social{
    height: 30px;
}

.other-page {
    position: fixed;
    right: 0px;
    top: 0px;
    margin: 20px;
    font-size: 16px;
    color: #7ac0de;
}

.playerCount {
    color: #eeffaa;
    height: 20px;
    margin-top: 20px;
    font-size: 14px;
    line-height: 20px;
    user-select: none;
}

.playerCount.error {
    color: #ff5555;
}

@media (max-width: 680px) { /*this is bc the steam widget is too wide on mobile making the page wider*/
    .steam-widget {
        display: block;
        width: 100%;
        max-width: 646px;
        margin: 20px auto 0;
        height: 240px;
    }
}

